// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CameraComponent should render as default correctly for perspective camera in viewing mode 1`] = `
<div>
  <group
    name="CAMERA_COMPONENT_testRef"
  />
</div>
`;

exports[`CameraComponent should render correctly for orthographic camera 1`] = `
<div>
  <group
    name="CAMERA_COMPONENT_testRef"
  >
    <primitive
      object="[object Object]"
    />
  </group>
</div>
`;

exports[`CameraComponent should render correctly for perspective camera 1`] = `
<div>
  <group
    name="CAMERA_COMPONENT_testRef"
  >
    <primitive
      object="[object Object]"
    />
  </group>
</div>
`;
